--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,21 @@ body {
 	margin: 20px;
 }
 
+/* Headings */
+h1, h2, h3, h4 {
+	font-weight: 600;
+}
+h1 { font-size: 2.20em; }
+h2 { font-size: 1.80em; }
+h3 { font-size: 1.40em; }
+h4 { font-size: 1.00em; }
+h1, h2 {
+	margin: 1rem 0 1em;
+}
+h3, h4 {
+	margin: 1.5em 0 0.5em;
+}
+
 .card {
 	background: white;
 	border-radius: 3px;
